Updating Olon basic example

--- a/examples/olon_basic/src/main/webapp/index.html
+++ b/examples/olon_basic/src/main/webapp/index.html
@@ -6,10 +6,10 @@
   </head>
   <body data-lift-content-id="main">
     <div id="main" data-lift="surround?with=default;at=content">
-      <h2>Welcome to your project!</h2>
+      <h2>Welcome to Olon Basic using Scala 3</h2>
       <p>
         <span data-lift="HelloWorld.howdy">
-          Welcome to your Lift app at <span id="time">Time goes here</span>
+          Welcome to your Olon app at <span id="time">Time goes here</span>
         </span>
       </p>
     </div>
