--- a/examples/olon_basic/src/main/webapp/templates-hidden/default.html
+++ b/examples/olon_basic/src/main/webapp/templates-hidden/default.html
@@ -33,10 +33,8 @@
 
     <div class="column span-23 last calign">
       <h4 class="alt">
-        <a href="http://www.liftweb.net"><i>Lift</i></a>
-        is Copyright 2007-2014 WorldWide Conferencing, LLC.
-        Distributed under an Apache 2.0 License.</h4>
-      </div>
+        <a href="https://github.com/talenteca/olon-web-framework"><i>Olon</i></a>
+      </h4>
     </div>
   </body>
   </html>
